docs: fix typo, add example, update swagger
