# docs/swagger.json
@@ -57,6 +57,13 @@
                 "summary": "Launch container if not assigned, and then return the assigned one.",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User's Json Web Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "example": "C gcc11",
                         "description": "target runtime name",
                         "name": "name",
